=== 0.0.1 2009-12-17

* 1 major enhancement:
  * Initial release