@@ -1,7 +1,4 @@
 
-For more information on cafepress-search-client, see http://cafepress-search-client.rubyforge.org
-
-NOTE: Change this information in PostInstall.txt 
-You can also delete it if you don't want it.
+For more information on the cafepress-search gem, see http://github.com/cafepress/cafepress-search
 
 
